cluster/prometheus/manifests/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.local.io
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
